# data-ngin

./: .env  .env.template  .env^T  .gitignore  CMakeLists.txt  DockerFile  OrderBook.cpp  OrderBook.h  README.md  docker-compose.airflow.yml  docker-compose.yml  main.cpp  mbo_data.py  newAnalystREADME.md  prometheus.yml  pyproject.toml  pyproject.toml^T  test.py  tokens.json
app/: db.py  main.py  mkdocs.yml
app/docs/: api_reference.md  index.md
app/middleware/: api_key_auth.py  request_logger.py
app/routes/: dynamic.py  export.py  metadata.py
app/scripts/: generate_api_key.py
app/site/: 404.html  index.html  objects.inv
contracts/: contract.csv  contract_eodhd.csv  contract_tiingo.csv  contract_valid.csv  contract_valid2.csv  eia_contracts.csv  new_full_contracts.csv
dags/: data_pipeline_dag.py  eia_pipeline_dag.py  eodhd_data_dag.py  macro_data_dag.py  new_data_pipeline_dag.py  tiingo_data_dag.py
dashboard/metrics/: demo_metrics_server.py  metrics_definitions.py  prometheus_registry.py
dashboard/observability/: prometheus.yml
data/: .gitignore  main.py  orchestrator.py
data/config/: config.yaml  config2.yaml  config_1.yaml  config_2.yaml
data/fred_mapping/: fred_series_mapping.yml  fred_series_metadata.yml
data/modules/: batch_download_databento_fetcher.py  cleaner.py  csv_loader.py  data_access.py  databento_cleaner.py  databento_fetcher.py  databento_ws_fetcher.py  db_models.py  fetcher.py  fred_cleaner.py  fred_fetcher.py  fred_loader.py  inserter.py  loader.py  schwab_cleaner.py  schwab_fetcher.py  timescaledb_inserter.py  tokens.json
data/wal/: 00000000
observability/: data_ngin_rules.yml
scripts/: build_tiingo_universe.py  init_db.py
src/: main.py  orchestrator.py
src/backups/: .pgpass.sample  crontab.sample  pg_backup.sh
src/config/: config.yaml  config_eodhd.yaml  config_tiingo.yaml  eia_config.yaml  new_config.yaml
src/modules/: data_access.py  data_staleness.py  db_models.py
tests/: test_batch_download_databento_fetcher.py  test_cleaner.py  test_config.py  test_contract_tiingo_universe.py  test_csv_loader.py  test_data_access.py  test_data_staleness.py  test_databento_fetcher.py  test_db_connection.py  test_db_models.py  test_determine_date_range.py  test_dynamic_loader.py  test_fetcher.py  test_fred_cleaner.py  test_fred_fetcher.py  test_fred_loader.py  test_integration_pipeline.py  test_loader.py  test_orchestrator.py  test_timescaledb_inserter.py
tests/cleaner/: test_cleaner.py  test_eodhd_cleaner.py  test_tiingo_cleaner.py
tests/fetcher/: test_databento_fetcher.py  test_eodhd_fetcher.py  test_fetcher.py  test_tiingo_fetcher.py
tests/inserter/: test_timescaledb_inserter.py
tests/loader/: test_csv_loader.py  (+1 more)
utils/: dynamic_loader.py  logging_config.py  unique_tickers.py
(+37 files in other folders)
