[tool.poetry]
name = "data"
packages = [
    { include = "data", from = "."}
]
version = "0.1.0"
description = ""
authors = ["patrickbott <gorays999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
pandas = "^2.2.3"
yfinance = "^0.2.48"
databento = "^0.44.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
psycopg2 = "^2.9.10"
sqlalchemy = "1.4.36"
apache-airflow = "^2.10.4"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pyarrow = "^18.1.0"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
